--- a/practice/pom.xml
+++ b/practice/pom.xml
@@ -38,6 +38,13 @@
 			<artifactId>javase</artifactId>
 			<version>2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>net.glxn.qrgen</groupId>
+			<artifactId>core</artifactId>
+			<version>2.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 
