--- a/practice/pom.xml
+++ b/practice/pom.xml
@@ -13,7 +13,7 @@
 		<java-version>1.8</java-version>
 		<org.springframework-version>4.1.6.RELEASE</org.springframework-version>
 		<logging.log4j>2.6.2</logging.log4j>
-		<java.home>D:\free\Java1.8.0_112\jdk</java.home>
+		<java.home>D:\gzqs\java\Java1.8.0_112\jdk</java.home>
 		<slf4j.version>1.7.21</slf4j.version>
 	</properties>
 
@@ -83,7 +83,6 @@
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<compilerArguments>
 						<verbose />
-						<!-- <bootclasspath>${java.home}/lib/rt.jar;${java.home}/lib/jce.jar</bootclasspath> -->
 					</compilerArguments>
 				</configuration>
 			</plugin>
