--- a/practice/pom.xml
+++ b/practice/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gzq</groupId>
@@ -20,11 +21,16 @@
   <dependencies>
 
     <!-- https://mvnrepository.com/artifact/aopalliance/aopalliance -->
-<!--     <dependency>
-      <groupId>aopalliance</groupId>
-      <artifactId>aopalliance</artifactId>
-      <version>1.0</version>
-    </dependency> -->
+    <!-- <dependency> <groupId>aopalliance</groupId> <artifactId>aopalliance</artifactId> 
+      <version>1.0</version> </dependency> -->
+
+    <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.2.4</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
