--- a/practice/pom.xml
+++ b/practice/pom.xml
@@ -24,6 +24,13 @@
     <!-- <dependency> <groupId>aopalliance</groupId> <artifactId>aopalliance</artifactId> 
       <version>1.0</version> </dependency> -->
 
+    <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+    <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.22.0-GA</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/cglib/cglib -->
     <dependency>
       <groupId>cglib</groupId>
